2H vs 1H+OH compare, few styles adjusts, item deletes, item copies, auto-unequip OH for 2H

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
 	<title>D3Up.com</title>
+	<link rel="stylesheet" href="/css/jquery.dataTables.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/dot-luv/jquery-ui.css" type="text/css" />
 	<link rel="stylesheet" href="/css/style.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="/css/select2.css" type="text/css" charset="utf-8">	
@@ -10,6 +11,7 @@
 	<script type="text/javascript" src="/js/select2.js"></script>
 	<script type="text/javascript" src="/js/tooltip.js"></script>
 	<script type="text/javascript" src="/js/jquery.diff.js"></script>
+	<script type="text/javascript" src="/js/jquery.dataTables.js"></script>
 </head>
 <body>
 	<div id="wrapper">
@@ -27,8 +29,8 @@
 				<li><a href="/user/register">Register</a></li>
 			<? endif; ?>
 		</ul>
-		<div id="sys-message">
-			<b>System Message</b>: Update #3 Deployed - Effective Health (EHP), Monster Levels and some GUI Improvements, <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">read more</a>. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. Thanks!
+		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
+			<b>System Message</b>: Update #4 Deployed - Gear Compare for 2H vs 1H + OH implemented and automatic, item deletion, item copying, and some styles. <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">Read it all on the /r/diablo post</a>. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. Thanks!
 		</div>
 		<div id="main">
 			<div id="content">
