--- a/application/views/scripts/index/_pages.phtml
+++ b/application/views/scripts/index/_pages.phtml
@@ -1,5 +1,5 @@
 <?php if ($this->pageCount > 1): ?>
-<div style="float: right">
+<div style="text-align: right">
 	<!-- Previous page link -->
 	<?php if ($this->prevoius != 1 && $this->current != 1): ?>
 		<a href="?page=1">&laquo;</a>
