--- a/application/views/scripts/user/items.phtml
+++ b/application/views/scripts/user/items.phtml
@@ -1,21 +1,45 @@
-<h3>My Items</h3>
 <? if($this->notLoggedIn): ?>
 	<p>This feature is only available to logged in users due to the nature of the application.</p>
 	<p>When logged in, the database will save the items you create and associate them to your account for ease of access.</p>
 	<p>Interested? Feel free to wander over to the <a href="/user/register">registration page</a> to create an account, or if you already have one, you can <a href="/user/login">login</a>.</p>
 <? else: ?>
-	<p><a href="/item/create">Add Item</a></p>
+	<p><a href="/item/create" style="padding: 5px 20px" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">Add Item</a></p>
 	<? if($this->items->count()):?>
-	<ul>
-		<? foreach($this->items as $item): ?>
-			<li><?= $this->itemLink($item) ?> (<?= ucwords(str_replace("-", " ", $item->type)) ?>) - <?= $this->itemLink($item, array('action' => 'edit', 'text' => 'Edit')) ?></li>
-		<? endforeach ?>
-	</ul>
-	<?php echo $this->paginationControl($this->items,
-	                                    'Elastic',
-	                                    'index/_pages.phtml'); ?>
+	<table id="my-items">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Type</th>
+				<!-- <th>Status</th> -->
+				<th>Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			<? foreach($this->items as $item): ?>
+				<tr>
+					<td><?= $this->itemLink($item) ?></td>
+					<td><?= ucwords(str_replace("-", " ", $item->type)) ?></td>
+					<!-- <td>
+						<span class='neg'>Not for Sale</span>
+					</td> -->
+					<td>
+						<?= $this->itemLink($item, array('action' => 'edit', 'text' => 'Edit', 'button' => true)) ?>
+						<?= $this->itemLink($item, array('action' => 'delete', 'text' => 'Delete', 'button' => true)) ?>
+					</td>
+				</tr>
+			<? endforeach ?>
+		</tbody>
+	</table>
 	<? else: ?>
 	<p>You don't have any items yet!</p>
 	<p>Click the "Add Item" button above to get started.</p>
 	<? endif; ?>
 <? endif; ?>
+<script type="text/javascript">
+$(document).ready(function() {
+	oTable = $('#my-items').dataTable({
+		"bJQueryUI": true,
+		"bStateSave": true
+	});
+});	
+</script>
