Build Copying / Editing / Descriptions.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -30,7 +30,7 @@
 			<? endif; ?>
 		</ul>
 		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: Update #4 Deployed - Gear Compare for 2H vs 1H + OH implemented and automatic, item deletion, item copying, and some styles. <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">Read it all on the /r/diablo post</a>. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. Thanks!
+			<b>System Message</b>: Update #5 Deployed - You can now edit your builds and add a description if you wish. You can also make a Copy of other peoples builds, which will copy all of the details, skills, and items into a new build that you control. <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">Read it all on the /r/diablo post</a>. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. Thanks!
 		</div>
 		<div id="main">
 			<div id="content">
