Some page titles.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<title>D3Up.com</title>
+	<?= $this->headTitle("Diablo 3 Upgrade Calculator")->setSeparator(' | '); ?>
 	<link rel="stylesheet" href="/css/jquery.dataTables.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/dot-luv/jquery-ui.css" type="text/css" />
 	<link rel="stylesheet" href="/css/style.css" type="text/css" charset="utf-8">	
