Fixed a little bit of logic.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -222,7 +222,7 @@
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/fullcalc.js"></script>
+<script type="text/javascript" src="/js/calc.js"></script>
 <script type="text/javascript">
 $("#character").tabs();
 $(".calc-stats").tabs();
