--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -220,3 +220,9 @@ ul#navigation li {
 	background: #0B3E6F;
 	background-image: none;
 }
+.chzn-results {
+	color: #000;
+}
+.create-form .chzn-container-single .chzn-default {
+	color: #444;
+}
