--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -226,3 +226,6 @@ ul#navigation li {
 .create-form .chzn-container-single .chzn-default {
 	color: #444;
 }
+.chzn-container .chzn-results li em {
+	background-color: #bbb;
+}
