--- a/application/views/scripts/user/builds.phtml
+++ b/application/views/scripts/user/builds.phtml
@@ -1,20 +1,41 @@
-<h3>My Character Builds</h3>
 <? if($this->notLoggedIn): ?>
 	<p>This feature is only available to logged in users due to the nature of the application.</p>
 	<p>When logged in, the database will save your character builds, the gear you choose to wear, the skills you use and more. This allows you to quickly compare items against your current gear, with detailed stats about your character immediately generated allowing you to make informed decisions about gear changes without actually having to purchase the gear itself.</p>
 	<p>Interested? Feel free to wander over to the <a href="/user/register">registration page</a> to create an account, or if you already have one, you can <a href="/user/login">login</a>.</p>
 <? else: ?>
-	<p><a href="/build/create">Add Character Build</a></p>
+	<p><a href="/build/create" style="padding: 5px 20px" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">Add Character Build</a></p>
 	<? if($this->builds->count()):?>
-	<ul>
+	<table id="recent-builds">
+		<tbody>
+			<tr>
+				<td colspan="10" class="build-paginator">
+					<?php echo $this->paginationControl($this->builds,
+					                                    'Elastic',
+					                                    'index/_pages.phtml',
+																							array(
+																								'buildClass' => $this->buildClass
+																							)); ?>
+				</td>
+			</tr>
 		<? foreach($this->builds as $build): ?>
-			<li><?= $this->mLink($build) ?> (<?= ucwords(str_replace("-", " ", $build->class)) ?>)</li>
-		<? endforeach ?>
-	</ul>
-	<?php echo $this->paginationControl($this->builds,
-	                                    'Elastic',
-	                                    'index/_pages.phtml'); ?>
-	<? else: ?>
+			<tr>
+				<td class="icon"><img src="/images/<?= $build->class ?>.png"/></td>
+				<td class="name"><?= $this->mLink($build) ?></td>
+				<td><?= $build->description ?></td>
+			</tr>
+		<? endforeach; ?>
+			<tr>
+				<td colspan="10" class="build-paginator">
+					<?php echo $this->paginationControl($this->builds,
+					                                    'Elastic',
+					                                    'index/_pages.phtml',
+																							array(
+																								'buildClass' => $this->buildClass
+																							)); ?>
+				</td>
+			</tr>
+		</tbody>
+	</table>	<? else: ?>
 	<p>You don't have any characters yet!</p>
 	<p>Click the "Add Hero" button above to get started.</p>
 	<? endif; ?>
