Added item name to page title.

--- a/application/views/scripts/record/item.phtml
+++ b/application/views/scripts/record/item.phtml
@@ -1,5 +1,6 @@
 <?
 	$profile = Epic_Auth::getInstance()->getProfile();
+	$this->headTitle($this->record->name); 
 ?>
 <style type="text/css" media="screen">
 	.single-item {
