Few fixes to DPS calculator

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -300,10 +300,10 @@
 		</ul>
 		<div style="background-image: none; padding: 15px 15px 0">
 			<select id="vsLevel">
-				<option value="60">Stats vs Level 60 Monster</option>
+				<option value="60" selected="selected">Stats vs Level 60 Monster</option>
 				<option value="61">Stats vs Level 61 Monster</option>
 				<option value="62">Stats vs Level 62 Monster</option>
-				<option value="63" selected="selected">Stats vs Level 63 Monster</option>
+				<option value="63">Stats vs Level 63 Monster</option>
 			</select>
 		</div>
 		<div id="tab-base">
@@ -330,7 +330,7 @@
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/calc.js"></script>
+<script type="text/javascript" src="/js/fullcalc.js"></script>
 <script type="text/javascript">
 $("#character").tabs({
     select: function(event, ui){
