--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -330,7 +330,7 @@
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/fullcalc.js"></script>
+<script type="text/javascript" src="/js/calc.js"></script>
 <script type="text/javascript">
 $("#character").tabs({
     select: function(event, ui){
